docs/mechanical/mechanical-scripting-interface/versions/2025.R2.SP00/api/ansys/mechanical/stubs/v251/Ansys/ACT/Automation/Mechanical/FE/CDB/BFBlockCommand.md
# `BFBlockCommand`

<a id="ansys.mechanical.stubs.v251.Ansys.ACT.Automation.Mechanical.FE.CDB.BFBlockCommand"></a>

#### *class* Ansys.ACT.Automation.Mechanical.FE.CDB.BFBlockCommand

Bases: [`object`](https://docs.python.org/3/library/functions.html#object)

Represents a BFBLOCK command.

<!-- !! processed by numpydoc !! -->

<a id="overview"></a>

## Overview

### Properties

| Name | Description |
|--------------------------------------------------------------|--------------------------------------------|
| [`Index`](#BFBlockCommand.Index)                             | Gets the command index.                    |
| [`Lab`](#BFBlockCommand.Lab)                                 | Gets the label.                            |
| [`Name`](#BFBlockCommand.Name)                               | Gets the command name.                     |
| [`NodalBodyForceCount`](#BFBlockCommand.NodalBodyForceCount) | Gets the number of nodal body-force loads. |
| [`NodalBodyForces`](#BFBlockCommand.NodalBodyForces)         | Gets the nodal body-force loads.           |

<a id="property-detail"></a>

## Property detail

<a id="BFBlockCommand.Index"></a>

### *property* BFBlockCommand.Index *: [int](https://docs.python.org/3/library/functions.html#int) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the command index.

<!-- !! processed by numpydoc !! -->

<a id="BFBlockCommand.Lab"></a>

### *property* BFBlockCommand.Lab *: [str](https://docs.python.org/3/library/stdtypes.html#str) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the label.

<!-- !! processed by numpydoc !! -->

<a id="BFBlockCommand.Name"></a>

### *property* BFBlockCommand.Name *: [str](https://docs.python.org/3/library/stdtypes.html#str) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the command name.

<!-- !! processed by numpydoc !! -->

<a id="BFBlockCommand.NodalBodyForceCount"></a>

### *property* BFBlockCommand.NodalBodyForceCount *: [int](https://docs.python.org/3/library/functions.html#int) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the number of nodal body-force loads.

<!-- !! processed by numpydoc !! -->

<a id="BFBlockCommand.NodalBodyForces"></a>

### *property* BFBlockCommand.NodalBodyForces *: [tuple](https://docs.python.org/3/library/stdtypes.html#tuple)[[Ansys.ACT.Automation.Mechanical.FE.CDB.CommandNodalBodyForce](CommandNodalBodyForce.md#ansys.mechanical.stubs.v251.Ansys.ACT.Automation.Mechanical.FE.CDB.CommandNodalBodyForce)] | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the nodal body-force loads.

<!-- !! processed by numpydoc !! -->

